# bibit

./: README.md  pyproject.toml
bibit/: cli.py  eg.py
dev/: playground.py  sample.bib
tests/: test-out.bib  test.bib  test_bibit.py
