[tool.poetry]
name = "bibit"
version = "0.1.0"
description = ""
authors = ["Desmond Liu <lzy7155@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
bibit = "bibit.cli:app"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
